--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 		<span style="--i:15">a</span>
 		<span style="--i:16">i</span>
 		<span style="--i:17">l</span>
+		<span style="--i:18">y</span>		
 	</div>
 	<!-- <div id="mycounter"></div> -->
 	<!-- <button data-modal-target="#modal">Start Game</button>  -->
