--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 				<class data-modal-target="#modal" id="rulesbutton"><img src="rulesicon.png" style="width:30px;height:30px;">
 			</span>	
 			<span class="stats-item">
-				<class data-summary-target="#summary" id="statsbutton"><img src="statsicon.png" style="width:40px;height:30px;">
+				<a href="https://www.buymeacoffee.com/sank0403/" target="_"><input type="button" class="buttonrad"
+						id="CoffeButton" value="❤️" /><a>
 			</span>			
 		</div>
 	</div>		
@@ -283,7 +284,7 @@
 	<div id="board" class="scroll">
 		<div id="try1">	</div>
 			<div id="trydetail1" class="trydetail">
-				<div class="detail1">Year</div>
+				<div class="detail1">1st Win</div>
 				<div class="detail2">Slam</div>
 				<div class="detail3">Country</div>
 				<div class="detail4">Gender</div>
@@ -292,7 +293,7 @@
 			</div><br>
 		<div id="try2"></div>
 			<div id="trydetail2" class="trydetail">
-				<div class="detail1">Year</div>
+				<div class="detail1">1st Win</div>
 				<div class="detail2">Slam</div>
 				<div class="detail3">Country</div>
 				<div class="detail4">Gender</div>
@@ -301,7 +302,7 @@
 			</div><br>
 		<div id="try3"></div>
 			<div id="trydetail3" class="trydetail">
-				<div class="detail1">Year</div>
+				<div class="detail1">1st Win</div>
 				<div class="detail2">Slam</div>
 				<div class="detail3">Country</div>
 				<div class="detail4">Gender</div>
@@ -310,7 +311,7 @@
 			</div><br>		
 		<div id="try4"></div>
 			<div id="trydetail4" class="trydetail">
-				<div class="detail1">Year</div>
+				<div class="detail1">1st Win</div>
 				<div class="detail2">Slam</div>
 				<div class="detail3">Country</div>
 				<div class="detail4">Gender</div>
@@ -319,7 +320,7 @@
 			</div><br>		
 		<div id="try5"></div>
 			<div id="trydetail5" class="trydetail">
-				<div class="detail1">Year</div>
+				<div class="detail1">1st Win</div>
 				<div class="detail2">Slam</div>
 				<div class="detail3">Country</div>
 				<div class="detail4">Gender</div>
@@ -328,7 +329,7 @@
 			</div><br>		
 		<div id="try6"></div>
 			<div id="trydetail6" class="trydetail">
-				<div class="detail1">Year</div>
+				<div class="detail1">1st Win</div>
 				<div class="detail2">Slam</div>
 				<div class="detail3">Country</div>
 				<div class="detail4">Gender</div>
