--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 				<class data-modal-target="#modal" id="rulesbutton"><img src="rulesicon.png" style="width:30px;height:30px;">
 			</span>	
 			<span class="stats-item">
-				<a href="https://www.buymeacoffee.com/sank0403/" target="_"><input type="button" class="buttonrad"
-						id="CoffeButton" value="❤️" /><a>
+				<a href="https://www.buymeacoffee.com/sank0403/" target="_">❤️<a>
 			</span>			
 		</div>
 	</div>		
