--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<class data-modal-target="#modal" id="rulesbutton"><img src="rulesicon.png" style="width:30px;height:30px;">
 			</span>	
 			<span class="stats-item">
-				<a href="https://www.buymeacoffee.com/sank0403/" target="_">❤️<a>
+				<a href="https://www.buymeacoffee.com/sank0403/" target="_"><img src="statsicon.png" style="width:30px;height:30px;"></a>
 			</span>			
 		</div>
 	</div>		
