--- a/index.html
+++ b/index.html
@@ -59,24 +59,19 @@
 	</div>
 	<br>
 	<div class="waviy">
-		<span style="--i:1">A</span>
-		<span style="--i:2"> </span>
-		<span style="--i:3">N</span>
-		<span style="--i:4">e</span>
-		<span style="--i:5">w</span>
-		<span style="--i:6"> </span>
-		<span style="--i:7">P</span>
-		<span style="--i:8">l</span>
-		<span style="--i:9">a</span>
-		<span style="--i:10">y</span>
-		<span style="--i:11">e</span>
-		<span style="--i:12">r</span>
-		<span style="--i:13"> </span>
-		<span style="--i:14">D</span>
-		<span style="--i:15">a</span>
-		<span style="--i:16">i</span>
-		<span style="--i:17">l</span>
-		<span style="--i:18">y</span>		
+		<span style="--i:1">p</span>
+		<span style="--i:2">r</span>
+		<span style="--i:3">a</span>
+		<span style="--i:4">c</span>
+		<span style="--i:5">t</span>
+		<span style="--i:6">i</span>
+		<span style="--i:7">c</span>
+		<span style="--i:8">e</span>
+		<span style="--i:9"> </span>
+		<span style="--i:10">m</span>
+		<span style="--i:11">o</span>
+		<span style="--i:12">d</span>
+		<span style="--i:13">e</span>		
 	</div>
 	<!-- <div id="mycounter"></div> -->
 	<!-- <button data-modal-target="#modal">Start Game</button>  -->
