--- a/index.html
+++ b/index.html
@@ -319,6 +319,8 @@
 		</form>
 	</div>
 	<div id="result"></div>
+	<br>
+	<input type="button" id="buttonref" value="🔄" onclick="window.location.reload(); this.blur();" class="buttonref">			
 </body>
 
 </html>
