--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 	</div>
 	<div id="result"></div>
 	<br>
-	<center><input type="button" id="buttonref" value="🔄" onclick="window.location.reload(); this.blur();" class="buttonref">/<center>
+	<center><input type="button" id="buttonref" value="🔄" onclick="window.location.reload(); this.blur();" class="buttonref"></center>
 </body>
 
 </html>
