--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 	</div>
 	<div id="result"></div>
 	<br>
-	<input type="button" id="buttonref" value="🔄" onclick="window.location.reload(); this.blur();" class="buttonref" hidden>
+	<input type="button" id="buttonref" value="🔄" onclick="window.location.reload(); this.blur();" class="buttonref">
 </body>
 
 </html>
