--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
 			<button data-close-button class="close-button">&times;</button>
 		</div>
 		<div class="modal-body Contents">
-		    <strong style="color:red;"> Based on User Feedback, the rules of the game have changed in the way the Year and GS titles are used. Please go through the rules again.</strong>
+		    <strong style="color:red;"> Based on User Feedback, the rules of the game have changed in the way the Year and GS titles are used. Please go through the rules again.</strong><br>
+		    <strong style="color:#6AAA64;"> This is the Practice Mode. Switch to the Daily Mode for the actual Game.
 			<p id="text-area">
 			(i) <strong style="color:white;">TENIZ</strong>, a game inspired by <strong style="color:white;">WORDLE</strong>, tests your knowledge on Tennis Grand Slam Champions of the Open
 			Era. The objective is to identify the Champion Tennis Player every day, using the Clues.
