--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		</div>
 		<div class="modal-body Contents">
 		    <strong style="color:red;"> Based on User Feedback, the rules of the game have changed in the way the Year and GS titles are used. Please go through the rules again.</strong><br><br>
-		     This is the <strong style="color:white;">Practice Mode</strong>. Switch to the <strong style="color:white;">Daily Mode </strong>for the actual Game.
+		     This is the <strong style="color:white;">PRACTICE MODE</strong>. Switch to the <strong style="color:white;">DAILY MODE </strong>for the actual Game.
 			<p id="text-area">
 			(i) <strong style="color:white;">TENIZ</strong>, a game inspired by <strong style="color:white;">WORDLE</strong>, tests your knowledge on Tennis Grand Slam Champions of the Open
 			Era. The objective is to identify the Champion Tennis Player every day, using the Clues.
