--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<div id="stats">
 		<div id="stats-item">
 			<span class="stats-item">
-				<class data-modal-target="#modal" id="rulesbutton"><img src="rulesicon.png" style="width:30px;height:30px;">
+				<class data-modal-target="#modal" id="rulesbutton"><img src="rulesicon.png" style="width:30px;height:30px;"></class>
 				<a href="https://tenizgame.github.io/"><img src="clock.jpg" style="width:28px;height:28px" alt ="Daily Mode"></a>					
 			</span>	
 			<span class="stats-item">
