--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 				<a href="https://tenizgame.github.io/"><img src="clock.jpg" style="width:28px;height:28px" alt ="Daily Mode"></a>					
 			</span>	
 			<span class="stats-item">
+				<a href="mailto: geowordle@gmail.com" target="_"><img src="mail.png" style="width:30px;height:30px" alt ="EMAIL"></a>
+				<a href="https://twitter.com/TenizGame?ref_src=twsrc%5Etfw" target="_"><img src="twitter.jpg" style="width:30px;height:30px" alt ="Twitter"></a>
 				<a href="https://www.buymeacoffee.com/sank0403/" target="_"><img src="hearticon.png" style="width:30px;height:30px;"></a>
 			</span>			
 		</div>
@@ -219,14 +221,14 @@
 				</div>
 			</div>
 		</div><br>
-		<div><a href="https://twitter.com/TenizGame?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large"
+		<!-- <div><a href="https://twitter.com/TenizGame?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large"
 				data-show-count="false">Follow @TenizGame</a>
 			<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 			<center>
 				<div class="email"><a href="mailto: geowordle@gmail.com">📧</a></div>
 			</center>
 		</div>
-		<br>
+		<br> -->
 	</div>
 	<div id="overlay"></div>
 	<div id="overlay1"></div>
