--- a/index.html
+++ b/index.html
@@ -242,90 +242,90 @@
 	</div>
 	<hr>
 	<div id="glt"></div>
-	<div id="board" class="scroll">
-		<div id="try1">	</div>
-			<div id="trydetail1" class="trydetail">
-				<div class="detail1">1st Win</div>
-				<div class="detail2">Slam</div>
-				<div class="detail3">Country</div>
-				<div class="detail4">Gender</div>
-				<div class="detail5">Titles</div>
-				<div class="detail6">Plays</div>		
-			</div><br>
-		<div id="try2"></div>
-			<div id="trydetail2" class="trydetail">
-				<div class="detail1">1st Win</div>
-				<div class="detail2">Slam</div>
-				<div class="detail3">Country</div>
-				<div class="detail4">Gender</div>
-				<div class="detail5">Titles</div>
-				<div class="detail6">Plays</div>		
-			</div><br>
-		<div id="try3"></div>
-			<div id="trydetail3" class="trydetail">
-				<div class="detail1">1st Win</div>
-				<div class="detail2">Slam</div>
-				<div class="detail3">Country</div>
-				<div class="detail4">Gender</div>
-				<div class="detail5">Titles</div>
-				<div class="detail6">Plays</div>		
-			</div><br>		
-		<div id="try4"></div>
-			<div id="trydetail4" class="trydetail">
-				<div class="detail1">1st Win</div>
-				<div class="detail2">Slam</div>
-				<div class="detail3">Country</div>
-				<div class="detail4">Gender</div>
-				<div class="detail5">Titles</div>
-				<div class="detail6">Plays</div>		
-			</div><br>		
-		<div id="try5"></div>
-			<div id="trydetail5" class="trydetail">
-				<div class="detail1">1st Win</div>
-				<div class="detail2">Slam</div>
-				<div class="detail3">Country</div>
-				<div class="detail4">Gender</div>
-				<div class="detail5">Titles</div>
-				<div class="detail6">Plays</div>		
-			</div><br>		
-		<div id="try6"></div>
-			<div id="trydetail6" class="trydetail">
-				<div class="detail1">1st Win</div>
-				<div class="detail2">Slam</div>
-				<div class="detail3">Country</div>
-				<div class="detail4">Gender</div>
-				<div class="detail5">Titles</div>
-				<div class="detail6">Plays</div>		
-			</div><br>
+	<br>
+	<div class="containers">
+		<form action="#" onsubmit="submitMe();return false" autocomplete="off" class="form">
+			<input type="text" placeholder="Search Player Name" class="search-field" / onKeyUp="showResults(this.value)"
+				name="functioninput" id="answertext" autofocus="autofocus">
+			<!-- <button type="submit" class="search-button" name="submit" id="submitbutton" disabled="disabled" > -->
+			<span onclick="disablederror();">
+				<button type="submit" class="search-button" name="submit" id="submitbutton" disabled="disabled">
+					<!-- <img src="search.png">  -->
+					SUBMIT
+				</button>
+			</span>
+		</form>
+	</div>
+	<div id="result"></div>	
 	</div>
 	<div id="historyfirst"></div>
 	<div id="historylast">
-	</div>	
+	</div><br>	
 	<div id="helpbuttons">
 		<button id="MODEButton" class="buttonmode" onclick="changemode();">Switch To EASY MODE</button>	
 		<class data-hintmodal-target="#hintmodal" id="hintbutton" hidden><button id="hint" class="buttonmode" onclick="	additionalhint();">Additional HINT</button></class>	
 		<class data-fbmodal-target="#fbmodal" id="fbmodal" hidden><button id="fbmodalbut" class="buttonmode">TEST</button></class>	
 		<!-- <class data-fbmodal-target="#fbmodal" id="fbmodal"> -->
 	</div>	
-	<hr>
 	<h1 id="answer"></h1>
-	<br>
-	<br>
-	<div class="containers">
-		<form action="#" onsubmit="submitMe();return false" autocomplete="off" class="form">
-			<input type="text" placeholder="Search Player Name" class="search-field" / onKeyUp="showResults(this.value)"
-				name="functioninput" id="answertext">
-			<!-- <button type="submit" class="search-button" name="submit" id="submitbutton" disabled="disabled" > -->
-			<span onclick="disablederror();">
-				<button type="submit" class="search-button" name="submit" id="submitbutton" disabled="disabled">
-					<img src="search.png">
-				</button>
-			</span>
-		</form>
-	</div>
-	<div id="result"></div>
-	<br>
-	<input type="button" id="buttonref" value="🔄" onclick="window.location.reload(); this.blur();" class="buttonref">
+	<br>	
+	<br>	
+	<hr>	
+	<!-- <div id="board" class="scroll"> -->
+	<div id="board">
+		<div id="try6" class="tryhdr">	</div>
+			<div id="trydetail6" class="trydetail">
+				<div class="detail1">1st Win</div>
+				<div class="detail2">Slams</div>
+				<div class="detail3">Country</div>
+				<div class="detail4">Gender</div>
+				<div class="detail5">Titles</div>
+				<div class="detail6">Plays</div>		
+			</div>
+		<div id="try5" class="tryhdr"></div>
+			<div id="trydetail5" class="trydetail">
+				<div class="detail1">1st Win</div>
+				<div class="detail2">Slams</div>
+				<div class="detail3">Country</div>
+				<div class="detail4">Gender</div>
+				<div class="detail5">Titles</div>
+				<div class="detail6">Plays</div>		
+			</div>
+		<div id="try4" class="tryhdr"></div>
+			<div id="trydetail4" class="trydetail">
+				<div class="detail1">1st Win</div>
+				<div class="detail2">Slams</div>
+				<div class="detail3">Country</div>
+				<div class="detail4">Gender</div>
+				<div class="detail5">Titles</div>
+				<div class="detail6">Plays</div>		
+			</div>	
+		<div id="try3" class="tryhdr"></div>
+			<div id="trydetail3" class="trydetail">
+				<div class="detail1">1st Win</div>
+				<div class="detail2">Slams</div>
+				<div class="detail3">Country</div>
+				<div class="detail4">Gender</div>
+				<div class="detail5">Titles</div>
+				<div class="detail6">Plays</div>		
+			</div>	
+		<div id="try2" class="tryhdr"></div>
+			<div id="trydetail2" class="trydetail">
+				<div class="detail1">1st Win</div>
+				<div class="detail2">Slams</div>
+				<div class="detail3">Country</div>
+				<div class="detail4">Gender</div>
+				<div class="detail5">Titles</div>
+				<div class="detail6">Plays</div>		
+			</div>	
+		<div id="try1" class="tryhdr"></div>
+			<div id="trydetail1" class="trydetail">
+				<div class="detail1">1st Win</div>
+				<div class="detail2">Slams</div>
+				<div class="detail3">Country</div>
+				<div class="detail4">Gender</div>
+				<div class="detail5">Titles</div>
+				<div class="detail6">Plays</div>		
+		</div>
 </body>
-
 </html>
