--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
 	<br>	
 	<br>	
 	<hr>	
-	<!-- <div id="board" class="scroll"> -->
-	<div id="board">
+	<div id="board" class="scroll"> 
+	<!-- <div id="board"> -->
 		<div id="try6" class="tryhdr">	</div>
 			<div id="trydetail6" class="trydetail">
 				<div class="detail1">1st Win</div>
