--- a/index.html
+++ b/index.html
@@ -328,6 +328,12 @@
 				<div class="detail5">Titles</div>
 				<div class="detail6">Plays</div>		
 		</div>
-	</div>		
+	</div>	
+	<br>		  
+	<h5>
+	<hr>
+		<center><strong style="color:white;">©️sank0403 - 2022</strong></center>
+	<hr>
+	</h5>				
 </body>
 </html>
